--- a/Frontend/views/sub-dept-wise-report.html
+++ b/Frontend/views/sub-dept-wise-report.html
@@ -804,8 +804,8 @@
 
             <!-- Report Table -->
             <div class="data-table-section">
-                <div class="table-responsive">
-                    <table class="table table-bordered table-striped custom-table mb-0">
+                <div> <!-- Removed table-responsive to avoid premature scrolling -->
+                    <table class="table table-bordered table-striped custom-table mb-0" style="width: 100%;">
 
                         <tbody id="reportTableBody">
                             <tr>
